--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
 <image src="Snigpic.jpg" width="110"  title="Tomper" border="4" id="img1" >
 <center><h1 id="head1">PARASA SNIGDHA</h1></center>
-<a href="mailto:snigdha2k03@gmail.com" id="gmailp"><img src="gmail.png" width="50px" ></a>
+<a href="mailto:snigdha2k03@gmail.com" id="gmailp"><img src="Gmail.png" width="50px" ></a>
 <a href="mailto:snigdha2k03@gmail.com" id="gmail" target="blank"> Gmail</a>
 <a href="https://www.linkedin.com/in/parasa-snigdha-612ba129a" id="linkedinp" target="blank"><img src="linkedin.png" width="80px"></a>
 <a href="https://www.linkedin.com/in/parasa-snigdha-612ba129a" id="linkedin" id="linkedin" target="blank">Linkedin</a>
