--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Delius&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Lexend:wght@100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <header>
-<image src="Snigpic.jpg" width="110"  title="Tomper" border="4" id="img1" >
+<img src="Snigpic.jpg" width="110"  title="Tomper" border="4" id="img1" >
 <center><h1 id="head1">PARASA SNIGDHA</h1></center>
 <a href="mailto:snigdha2k03@gmail.com" id="gmailp"><img src="Gmail.png" width="50px" ></a>
 <a href="mailto:snigdha2k03@gmail.com" id="gmail" target="blank"> Gmail</a>
