--- a/index.html
+++ b/index.html
@@ -204,17 +204,26 @@ snigdha2k03@gmail.com
 </pre>
 </div>
 <h1 class="sheadings">
+Work experience
+</h1>
+<pre class="sppara">
+Working as a circuit testing Engineer at Vector Technics from May,2025.
+</pre>
+<h1 class="sheadings">
 Declaration
 </h1>
 <pre class="sppara">
 I hereby declare that all of the information mentioned above is correct and true 
 to the best of my knowledge.
-</p>
+</pre>
 <div class="signature">
 <img src="snig_sign.png" width="190px" height="71px">
 <h2>Signature</h2> 
 </div>
 <br>
 <br>
+<footer class="footer">
+  <p>&copy; 2025 Parasa Snigdha. All rights reserved.</p>
+</footer>
 </body>
 </html>
