--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Delius&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Lexend:wght@100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Delius&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Lexend:wght@100..900&family=Mea+Culpa&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <header>
 <img src="Snigpic.jpg" width="110"  title="Tomper" border="4" id="img1" >
@@ -20,6 +20,11 @@
 <hr id="line">
 </header>
 <body>
+<div id="welcome">
+<h1>Welcome to My Resume</h1>
+</div>
+
+<div class="page-content">
 <aside>
 <div class="leftie">
 <h2>
@@ -222,8 +227,9 @@ to the best of my knowledge.
 </div>
 <br>
 <br>
-<footer class="footer">
-  <p>&copy; 2025 Parasa Snigdha. All rights reserved.</p>
+<footer>
+<p>&copy; 2025 Parasa Snigdha. All rights reserved.</p>
 </footer>
+</div>
 </body>
 </html>
