--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@ Smart IoT Switchboard with Arduino Uno
 connected wide number of switches in a single board with cost-effective and
 space-saving constraints.
 </pre>
+<h2 class="subheadings">
+Machine learning-Driven Fault Detection in Switched Reluctance Motor
+</h2>
+<pre class="sparagraphs">
+<u>Description:</u> Simulated a Switched Reluctance Motor (SRM) using a 
+sophisticated Finite Element Method (FEM) tool to analyze its performance
+under both optimal and fault-induced conditions. Generated datasets capturing
+motor behavior during these varied states and used them to train a 
+Machine Learning (ML) model capable of monitoring real-time motor operation.
+The model can accurately detect potential faults, identify the affected phase,
+and quantify deviations in winding current or torque compared to normal
+operating conditions.
+</pre>
 <h1 class="headings">
 Internships
 </h1>
@@ -176,6 +189,9 @@ of EEE, VRSEC.
 </li>
 <li>Took part in MEDHA (Technical Quiz) event of LAKSHYA 2K24, Organized by
 Department of EEE, LBRCE.</li>
+<li>Received a merit trophy and certificate of recognition from APSSDC-Naandi’s
+Foundation and Mahindra pride classroom for emplayability skills. Excelled in communication, Professional Etiquette, Time Management, Problem
+Solving and Adaptability skills after the completion of the course.</li>
 </ul>
 <h1 class="headings">
 Personal Details
